# eKW-pobieracz

./: .gitignore  eKW_pobieracz.py  eKW_pobieracz_ui.py  pyproject.toml  res_rc.py
ekw/: __main__.py  old_scraper.py  process.py  scraper.py
ekw/utils/: config.py  logging.py  settings.py  sum.py
etc/: constants.json
