[tool.poetry]
name = "ekw-pobieracz"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
pandas = "^2.2.2"
orjson = "^3.10.6"
sqlalchemy = "^2.0.31"
typer = {extras = ["all"], version = "^0.12.3"}


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
